--- a/.github/workflows/android-build.yml
+++ b/.github/workflows/android-build.yml
@@ -20,7 +20,7 @@ jobs:
     - name: Set up Node.js
       uses: actions/setup-node@v3
       with:
-        node-version: '16'
+        node-version: '18'  # Güncel Node.js sürümü
 
     - name: Install dependencies
       run: yarn install
@@ -32,10 +32,10 @@ jobs:
         java-version: '11'
 
     - name: Install Android SDK
-      uses: android-actions/setup-android@v2
+      uses: android-actions/setup-android@v3  # Sürüm güncellenmiş olabilir
       with:
         api-level: 31
-        build-tools-version: '31.0.0'
+        build-tools-version: 31.0.0
 
     - name: Build Android APK
       run: |
